fixed responsiveness on mobile and tablet

--- a/style.css
+++ b/style.css
@@ -17,8 +17,13 @@
 } */
 
 .container {
+    margin: 0 auto;
+    /* max-width: 500px; */
+}
+
+.container.flex {
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     flex-wrap: wrap;
     justify-content: space-between;
 }
@@ -42,8 +47,7 @@ a {
 }
 
 section {
-    max-width: 440px;
-    padding: 0 4px;
+    padding: 1px 4px 30px;
 }
 
 /* HEADER STUFF */
@@ -52,9 +56,13 @@ section {
     justify-content: flex-end;
 }
 
-.social-media-icons > a {
+.social-media-icons img {
     width: 35px;
     margin: 8px;
+}
+
+.social-media-icons.bottom {
+    justify-content: center;
 }
 
 header {
@@ -64,20 +72,31 @@ header {
     width: 100%;
     height: 350px;
     padding: 8px;
-    position: relative;
+    /* position: relative; */
     z-index: 0;
 }
 
+.lars-pic {
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: flex-end;
+    /* width: auto; */
+    /* background: chartreuse; */
+    /* margin-left: auto; */
+    /* position: absolute; */
+    /* bottom: 0; */
+    /* height: 0; */
+    transform: translate(-80px, -40%);
+}
+
 .lars-pic-wrapper {
-    width: 40%;
+    width: 180px;
     height: auto;
-    position: absolute;
-    bottom: 0;
-    right: 25%;
+    /* right: 25%; */
     overflow: hidden;
     object-fit: cover;
     border-radius: 46%;
-    border: 8px solid white;
+    border: 7px solid white;
     /* margin: 8px 30px 0 auto; */
     transform: rotate(-25deg) translate(0, 50%);    
     z-index: 1;
@@ -121,10 +140,11 @@ header h2 {
 
 /* MAIN SECTION */
 
-main {
+.intro {
     background-image: url(/resources/bg-balls.svg);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
+    /* margin: 0 auto; */
 }
 
 .intro h4 {
@@ -134,7 +154,7 @@ main {
 }
 
 .intro p {
-    margin-top: 120px;
+    margin: 130px 0;
 }
 
 section > h2 {
@@ -143,10 +163,10 @@ section > h2 {
     line-height: 1;
     color: white;
     width: fit-content;
-    margin: 88px auto 24px auto;
+    margin: 40px auto;
 }
 
-section > h3 {
+section h3 {
     background: var(--primary-red);
     padding: 0 8px;
     line-height: 1;
@@ -155,38 +175,50 @@ section > h3 {
     margin: 48px auto 16px auto;
 }
 
+.thoughts {
+    background: rgb(244, 245, 243);
+}
+
 /* PROJECTS */
 
-.project {
+.project.card {
     background: white;
     padding-bottom: 12px;
-    margin-bottom: 54px;
+    margin-bottom: 66px;
     width: 100%;
 
     /* position: relative; */
     /* background: var(--primary-red); */
 }
 
-.more-projects .project {
+.project.card p {
+    margin: 8px 0;
+}
+
+.more .project {
     margin-bottom: 12px;
 } 
 
 .thumbnail {
     position: relative;
     width: auto;
-    height: 200px;
+    height: auto;
 }
 
 .thumbnail h3 {
     font-family: var(--font-mono);
     font-weight: 500;
-    width: 100%;
-    padding: 0 4px;
+    width: fit-content;
+    padding: 4px 8px;
+    /* text-align: center; */
+    margin: 0;
+    /* background: none; */
     font-size: 36px;
     color: white;
-    position: absolute;           
+    position: absolute;
+    right: 50%;           
     top: 50%;                         
-    transform: translate(0, -50%);    
+    transform: translate(50%, -50%);    
 }
 
 .thumbnail img {
@@ -204,13 +236,14 @@ ul {
 li {
     font-family: var(--font-mono);
     list-style: none;
+    line-height: 1.7;
 }
 
-ul.tech {
+ul.comma-list {
     justify-content: center;
 }
 
-ul.tech li:not(:last-child):after {
+ul.comma-list li:not(:last-child):after {
     content: ',';
     padding-right: 8px;
 }
@@ -223,65 +256,91 @@ ul.tags li {
     color: white;
 }
 
-.project.card p {
-    margin: 8px 0;
-}
-
-img {
-    /* width: 100%; */
-}
-
-.more-projects h3 {
+.more .container .project h3 {
     font-size: 24px;
     color: black;
+    background: none;
+    width: auto;
     text-align: left;
-    /* margin-top: 36px; */
+    margin: 4px 0;
+    padding: 0;
 }
 
 .img-placeholder {
-    width: 100%;
+    width: auto;
     min-height: 200px;
     background: var(--primary-red);
 }
 
+.skills div {
+    margin: 0 auto;
+}
+
+.for-more {
+    background: var(--primary-green);
+}
+
+.for-more div {
+    margin: 0 auto;
+}
+
+footer {
+    background: var(--primary-red);
+    color: white;
+    text-align: center;
+    height: 200px;
+    padding: 24px 0;
+}
+
+footer h3 {
+    font-size: 24px;
+    margin-bottom: 24px;
+}
+
+footer p {
+    line-height: 1.4;
+}
 
 /* BREAKPOINTS */
-@media (min-width: 678px) {
+
+/* MOBILE LANDSCAPE */
+@media (min-width: 576px) {
+    p, .comma-list li {
+        font-size: 20px;
+    }
+
     .lars-pic-wrapper {
-    width: 240px;
-    right: 100px;
+        width: 220px;
     }
 
-    section {
-        max-width: 1000px;
-        padding: 0 36px;
+    .lars-pic {
+        transform: translate(-80px, -60%);
+    }    
+    .skills div {
+        max-width: 30%;
     }
-    
-    .project.card {
-        max-width: 45%;
-        margin: 12px;
-        margin-bottom: 32px;
+    .skills li {
+        font-size: 20px;
+        /* margin: 0 auto; */
+        text-align: center;
     }
 
+    .skills ul {
+        flex-direction: column;
+    }
+
+    .skills ul li:not(:last-child):after {
+        content: '';
+        padding-right: 0;
+    }
+
+
+}
+
+/* TABLET */
+@media (min-width: 768px) {
     p {
         font-size: 24px;
-    }
-
-    .title {
-        padding: 0 36px;
-    }
-
-    .title h2 {
-        font-size: 75px;
-    }
-
-    .social-media-icons {
-        padding-right: 60px;
-    }
-
-    .social-media-icons > a {
-        width: 45px;
-        margin: 8px;
     }
 
     h4, h3 {
@@ -289,23 +348,69 @@ img {
     }
 
     h2 {
+        font-size: 30px;
         line-height: 1.9;
     }
 
-    .featured-projects {
+    header {
+        height: 400px;
+    }
+
+    .title {
+        padding: 0 36px;
+    }
+
+    .title h1 {
+        font-size: 26px;
+    }
+
+    .title h2 {
+        font-size: 75px;
+    }
+
+    .title p {
+        font-size: 32px;
+    }
+
+    .lars-pic-wrapper {
+        width: 240px;
+    }
+
+    .lars-pic {
+        transform: translate(-80px, -100%);
+    }    
+    
+    .social-media-icons {
+        padding-right: 60px;
+    }
+
+    .social-media-icons img {
+        width: 45px;
+        margin: 8px;
+    }
+
+    .intro p {
+        margin: 20px 0;
+    }
+    
+    .container {
+        /* max-width: 1000px; */
+        padding: 0 36px;
+    }
+
+    section {
+        padding: 36px 0;
+    }
+    
+    .project.card {
+        max-width: 48%;
+        margin-bottom: 36px;
+    }
+
+    .featured.projects {
         background: var(--primary-green);
     }
     
-    .tech li {
-        font-size: 20px;
-    }
-
-    .featured-projects>h2 {
-        position: relative;
-        bottom: 80px;
-        margin-top: 220px;
-    }
-
     .project p {
         font-size: 16px;
         padding: 4px 8px;
@@ -317,4 +422,27 @@ img {
         margin: 4px;
         font-size: 16px;
     }
+
+    
+}
+
+/* DESKTOP */
+@media (min-width: 992px) {
+    .project.card {
+        max-width: 31%;
+    }
+
+    .social-media-icons {
+        padding-right: 40px;
+    }
+
+    .social-media-icons img {
+        width: 50px;
+        /* height: 80px; */
+        margin: 16px;
+    }
+}
+
+/* LARGE DESKTOP */
+@media (min-width: 1200px) {
 }
